打开盒子系列全部

--- a/blog/_posts/2020-11-02-p2pnetwork1.md
+++ b/blog/_posts/2020-11-02-p2pnetwork1.md
@@ -1,12 +1,21 @@
 ---
-title: P2P 网络（1）
+
+title: P2P 网络（1）概要
 summary: 比特币网络协议允许全节点协作地维护一个P2P（peer-to-peer）对等网络，用于块和交易交换
 date: 2020-11-02 10:00
 tags:
 - 比特币
+- 翻译
+
 ---
 
 # P2P 网络
+
+::: info
+
+翻译自[P2P Network](https://developer.bitcoin.org/devguide/p2p_network.html#)
+
+:::
 
 The Bitcoin network protocol allows full nodes (peers) to collaboratively maintain a peer-to-peer network for block and transaction exchange.
 
@@ -30,16 +39,22 @@ To provide practical examples of the Bitcoin [peer-to-peer network](https://dev
 
 When started for the first time, programs don’t know the IP addresses of any active full nodes. In order to discover some IP addresses, they query one or more DNS names (called [DNS seeds](https://developer.bitcoin.org/glossary.html#term-DNS-seed)) hardcoded into Bitcoin Core and [BitcoinJ](http://bitcoinj.github.io/). The response to the lookup should include one or more [DNS A records](http://tools.ietf.org/html/rfc1035#section-3.2.2) with the IP addresses of full nodes that may accept new incoming connections. For example, using the Unix ``dig` command <[dig (command) - Wikipedia](https://en.wikipedia.org/wiki/Dig_%28Unix_command%29)>`__:
 
-当第一次启动时，程序不知道任何活动的完整节点的 IP 地址。为了发现一些 IP 地址，他们查询一个或多个被硬编码成比特币核心和 BitcoinJ 的 DNS 名称(称为 DNS 种子)。查找的响应应该包括一个或多个 DNS a 记录，其中包含可能接受新传入连接的完整节点的 IP 地址。例如，使用 Unix 的“ dig’命令 < https://en.wikipedia.org/wiki/dig_%28unix_command%29 >
+当第一次启动时，程序不知道任何活动中的全节点的 IP 地址。为了发现一些 IP 地址，他们查询一个或多个被硬编码成的 DNS 种子。查找的响应应该包括一个或多个 DNS A 记录，其中包含可能接受新传入连接的全节点的 IP 地址。例如，使用 Unix 的“ dig’命令
 
-;; QUESTION SECTION:
-;seed.bitcoin.sipa.be.      IN  A
+```Bash
+% dig seed.bitcoin.sipa.be +nostats +nocomments +nocmd
 
-;; ANSWER SECTION:
-seed.bitcoin.sipa.be.   60  IN  A  192.0.2.113
-seed.bitcoin.sipa.be.   60  IN  A  198.51.100.231
-seed.bitcoin.sipa.be.   60  IN  A  203.0.113.183
-[...]
+; <<>> DiG 9.10.6 <<>> seed.bitcoin.sipa.be +nostats +nocomments +nocmd
+;; global options: +cmd
+;seed.bitcoin.sipa.be.        IN    A
+seed.bitcoin.sipa.be.    3599    IN    A    51.77.152.20
+seed.bitcoin.sipa.be.    3599    IN    A    46.166.175.40
+seed.bitcoin.sipa.be.    3599    IN    A    148.251.155.70
+seed.bitcoin.sipa.be.    3599    IN    A    178.63.188.60
+seed.bitcoin.sipa.be.    3599    IN    A    52.221.215.57
+seed.bitcoin.sipa.be.    3599    IN    A    13.233.97.177
+.
+```
 
 The DNS seeds are maintained by Bitcoin community members: some of them provide dynamic DNS seed servers which automatically get IP addresses of active nodes by scanning the [network](https://developer.bitcoin.org/devguide/p2p_network.html); others provide static DNS seeds that are updated manually and are more likely to provide IP addresses for inactive nodes. In either case, nodes are added to the DNS seed if they run on the default Bitcoin ports of 8333 for mainnet or 18333 for testnet.
 
@@ -73,11 +88,11 @@ As a manual fallback option, Bitcoin Core also provides several command-line con
 
 资源: 比特币 Seeder，由比特币核心和 BitcoinJ 使用的几个种子运行的程序。比特币核心 DNS 种子策略。比特币核心和 BitcoinJ 使用的硬编码 IP 地址列表使用的是最大完工时间脚本。
 
-## Connecting To Peers 联系同龄人[](https://developer.bitcoin.org/devguide/p2p_network.html#connecting-to-peers "Permalink to this headline")
+##连接到节点
 
 Connecting to a peer is done by sending a [“version” message](https://developer.bitcoin.org/reference/p2p_networking.html#version), which contains your version number, block, and current time to the remote node. The remote node responds with its own [“version” message](https://developer.bitcoin.org/reference/p2p_networking.html#version). Then both nodes send a [“verack” message](https://developer.bitcoin.org/reference/p2p_networking.html#verack) to the other node to indicate the connection has been established.
 
-通过发送一个“ version”消息来连接到对等节点，该消息包含您的版本号、块和当前时间到远程节点。远程节点用它自己的“版本”消息进行响应。然后两个节点向另一个节点发送一个“ verack”消息，以表明连接已经建立。
+通过发送一个“ version”消息来连接到对等节点，该消息包含您的版本号、块和当前时间到远程节点。远程节点用它自己的“version”消息进行响应。然后两个节点向另一个节点发送一个“ verack”消息，以表明连接已经建立。
 
 Once connected, the client can send to the remote node `getaddr` and [“addr” messages](https://developer.bitcoin.org/reference/p2p_networking.html#addr) to gather additional peers.
 
@@ -87,11 +102,11 @@ In order to maintain a connection with a peer, nodes by default will send a mess
 
 为了维护与对等节点的连接，默认情况下，节点将在30分钟的不活动状态之前向对等节点发送消息。如果90分钟过去了，对等端没有接收到消息，客户端将假定连接已经关闭。
 
-## Initial Block Download 初次阻止下载[](https://developer.bitcoin.org/devguide/p2p_network.html#initial-block-download "Permalink to this headline")
+## 初次区块下载
 
 Before a full node can validate unconfirmed transactions and recently-mined blocks, it must download and validate all blocks from block 1 (the block after the hardcoded genesis block) to the current tip of the best block chain. This is the Initial Block Download (IBD) or initial sync.
 
-在完整的节点验证未确认的事务和最近挖掘的块之前，它必须下载并验证从块1(硬编码起源块之后的块)到最佳块链的当前顶端的所有块。这是初始块下载(IBD)或初始同步。
+在全节点验证未确认的交易和最近挖掘的块之前，它必须下载并验证从块1(硬编码起源块之后的块)到最佳块链的当前顶端的所有块。这是初始块下载(IBD)或初始同步。
 
 Although the word “initial” implies this method is only used once, it can also be used any time a large number of blocks need to be downloaded, such as when a previously-caught-up node has been offline for a long time. In this case, a node can use the IBD method to download all the blocks which were produced since the last time it was online.
 
@@ -101,7 +116,7 @@ Bitcoin Core uses the IBD method any time the last block on its local best block
 
 比特币核心使用 IBD 方法，任何时候当地最好的块链上的最后一个块头时间超过24小时。如果比特币核心0.10.0的本地最佳区块链比本地最佳区块链低144个区块(也就是说，本地区块链在过去大约24小时以上) ，它也将执行 IBD。
 
-### Blocks-First 积木-第一[](https://developer.bitcoin.org/devguide/p2p_network.html#blocks-first "Permalink to this headline")
+### 第一个区块
 
 Bitcoin Core (up until version [0.9.3](https://bitcoin.org/en/release/v0.9.3)) uses a simple initial block download (IBD) method we’ll call *blocks-first*. The goal is to download the blocks from the best block chain in sequence.
 
