--- a/blog/_posts/2020-11-02-p2pnetwork2.md
+++ b/blog/_posts/2020-11-02-p2pnetwork2.md
@@ -1,11 +1,21 @@
 ---
-title: P2P 网络（3）
-summary: 比特币网络协议允许全节点协作地维护一个P2P（peer-to-peer）对等网络，用于块和交易交换
+
+title: P2P 网络（2）技术参考
+summary: 本节描述比特币 P2P 网络协议(但它不是一个规范)。它没有描述已经停止使用的 ip 到 ip 直接支付协议、不推荐使用的 BIP70支付协议、 GetBlockTemplate 挖掘协议，或者任何从未在官方版本的比特币核心中实现的网络协议
 date: 2020-11-02 11:00
 tags:
 - 比特币
+- 翻译
+
 ---
-# P2P Network P2P 网络[](https://developer.bitcoin.org/reference/p2p_networking.html#p2p-network "Permalink to this headline")
+
+# P2P 网络技术参考
+
+::: info
+
+翻译自[P2P Network](https://developer.bitcoin.org/reference/p2p_networking.html)
+
+:::
 
 This section describes the Bitcoin P2P [network](https://developer.bitcoin.org/devguide/p2p_network.html) protocol (but it is [not a specification](https://developer.bitcoin.org/reference/intro.html#not-a-specification)). It does not describe the discontinued direct [IP-to-IP payment protocol](https://en.bitcoin.it/wiki/IP_Transactions), the [deprecated BIP70 payment protocol](https://developer.bitcoin.org/glossary.html#term-Payment-protocol), the [GetBlockTemplate mining protocol](https://developer.bitcoin.org/devguide/mining.html#getblocktemplate-rpc), or any [network](https://developer.bitcoin.org/devguide/p2p_network.html) protocol never implemented in an official version of Bitcoin Core.
 
@@ -19,7 +29,7 @@ All [peer-to-peer](https://developer.bitcoin.org/devguide/p2p_network.html) co
 
 注意: 除非它们的描述另有说明，否则本节中提到的所有多字节整数都是按小端顺序传输的。
 
-## Constants And Defaults 常量和默认值[](https://developer.bitcoin.org/reference/p2p_networking.html#constants-and-defaults "Permalink to this headline")
+## 常量和默认值
 
 The following constants and defaults are taken from Bitcoin Core’s [chainparams.cpp](https://github.com/bitcoin/bitcoin/blob/master/src/chainparams.cpp) source code file.
 
@@ -43,7 +53,7 @@ Bitcoin Core’s [chainparams.cpp](https://github.com/bitcoin/bitcoin/blob/mast
 
 比特币核心的 chainparams.cpp 还包括其他对程序有用的常量，比如不同网络的起源块散列。
 
-## Protocol Versions 协议版本[](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions "Permalink to this headline")
+## 协议版本
 
 The table below lists some notable versions of the P2P [network](https://developer.bitcoin.org/devguide/p2p_network.html) protocol, with the most recent versions listed first. (If you know of a protocol version that implemented a major change but which is not listed here, please [open an issue](https://github.com/bitcoin-dot-org/bitcoin.org/issues).)
 
@@ -71,17 +81,17 @@ As of Bitcoin Core 0.18.0, the most recent protocol version is 70015.
 | 209       | [Bitcoin Core 0.2.9](https://github.com/bitcoin/bitcoin/commit/42605ce8bcc9bd01b86491c74fee14de77960868) (May 2010)比特币核心0.2.9(2010年5月)    | - Added checksum field to message headers, added [“verack” message](https://developer.bitcoin.org/reference/p2p_networking.html#verack), and added starting height field to [“version” message](https://developer.bitcoin.org/reference/p2p_networking.html#version).向消息标题添加校验和字段，添加“ verack”消息，并向“ version”消息添加起始高度字段。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
 | 106       | [Bitcoin Core 0.1.6](https://github.com/bitcoin/bitcoin/commit/cc0b4c3b62367a2aebe5fc1f4d0ed4b97e9c2ac9) (Oct 2009)比特币核心0.1.6(2009年10月)   | - Added transmitter IP address fields, nonce, and User Agent (subVer) to [“version” message](https://developer.bitcoin.org/reference/p2p_networking.html#version).增加了发射机 IP 地址字段，nonce，和用户代理(subVer)的“版本”消息。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
 
-## Message Headers 消息头[](https://developer.bitcoin.org/reference/p2p_networking.html#message-headers "Permalink to this headline")
+## 消息头
 
 All messages in the [network](https://developer.bitcoin.org/devguide/p2p_network.html) protocol use the same container format, which provides a required multi-field message header and an optional payload. The message header format is:
 
 网络协议中的所有消息使用相同的容器格式，它提供了所需的多字段消息头和可选的有效负载。消息头格式如下:
 
-| Bytes字节 | Name姓名             | Data Type数据类型 | Description描述                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
-| ------- | ------------------ | ------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 4图4     | start string起始串    | char[4][4]    | Magic bytes indicating the originating [network](https://developer.bitcoin.org/devguide/p2p_network.html); used to seek to next message when stream state is unknown.指示原始网络的神奇字节; 用于在流状态未知时寻找下一条消息。                                                                                                                                                                                                                                                                                                                        |
-| 12图12   | command name命令名    | char[12][12]  | ASCII string which identifies what message type is contained in the payload. Followed by nulls (0x00) to pad out byte count; for example: `version\0\0\0\0\0`.ASCII 字符串，标识有效负载中包含的消息类型。后面跟着 nulls (0x00)来填充字节计数; 例如: version 000000。                                                                                                                                                                                                                                                                                       |
-| 4图4     | payload size有效载荷大小 | uint32_t32t   | Number of bytes in payload. The current maximum number of bytes ([“MAX_SIZE”](https://github.com/bitcoin/bitcoin/blob/60abd463ac2eaa8bc1d616d8c07880dc53d97211/src/serialize.h#L23)) allowed in the payload by Bitcoin Core is 32 MiB—messages with a payload size larger than this will be dropped or rejected.有效载荷中的字节数。目前，比特币核心的有效载荷允许的最大字节数(“ MAX _ size”)为32 mib ーー有效载荷大于此的消息将被删除或拒绝。                                                                                                                                 |
+| Bytes字节 | Name姓名             | Data Type数据类型 | Description描述                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
+| ------- | ------------------ | ------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| 4图4     | start string起始串    | char[4][4]    | Magic bytes indicating the originating [network](https://developer.bitcoin.org/devguide/p2p_network.html); used to seek to next message when stream state is unknown.指示原始网络的神奇字节; 用于在流状态未知时寻找下一条消息。                                                                                                                                                                                                                                                                                                          |
+| 12图12   | command name命令名    | char[12][12]  | ASCII string which identifies what message type is contained in the payload. Followed by nulls (0x00) to pad out byte count; for example: `version\0\0\0\0\0`.ASCII 字符串，标识有效负载中包含的消息类型。后面跟着 nulls (0x00)来填充字节计数; 例如: version 000000。                                                                                                                                                                                                                                                                         |
+| 4图4     | payload size有效载荷大小 | uint32_t32t   | Number of bytes in payload. The current maximum number of bytes ([“MAX_SIZE”](https://github.com/bitcoin/bitcoin/blob/60abd463ac2eaa8bc1d616d8c07880dc53d97211/src/serialize.h#L23)) allowed in the payload by Bitcoin Core is 32 MiB—messages with a payload size larger than this will be dropped or rejected.有效载荷中的字节数。目前，比特币核心的有效载荷允许的最大字节数(“ MAX _ size”)为32 mib ーー有效载荷大于此的消息将被删除或拒绝。                                                                                                                   |
 | 4图4     | checksum校验和        | char[4][4]    | *Added in*[protocol version 209](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*.* First 4 bytes of SHA256(SHA256(payload)) in internal byte order. If payload is empty, as in `verack` and [“getaddr” messages](https://developer.bitcoin.org/reference/p2p_networking.html#getaddr), the checksum is always 0x5df6e0e2 (SHA256(SHA256())).增加了协议版本209。以内部字节顺序排列的 SHA256(SHA256(有效负载))的前4个字节。如果有效负载为空，就像在 verack 和“ getaddr”消息中一样，校验和总是为0x5df6e0e2(SHA256(SHA256(< 空字符串 >))。 |
 
 The following example is an annotated hex dump of a mainnet message header from a [“verack” message](https://developer.bitcoin.org/reference/p2p_networking.html#verack) which has no payload.
@@ -93,7 +103,7 @@ f9beb4d9 ................... Start string: Mainnet
 00000000 ................... Byte count: 0
 5df6e0e2 ................... Checksum: SHA256(SHA256())
 
-## Data Messages 数据信息[](https://developer.bitcoin.org/reference/p2p_networking.html#data-messages "Permalink to this headline")
+## 数据信息
 
 The following [network](https://developer.bitcoin.org/devguide/p2p_network.html) messages all request or provide data related to transactions and blocks.
 
@@ -136,7 +146,7 @@ Type identifier zero and type identifiers greater than seven are reserved for fu
 
 类型标识符0和大于7的类型标识符被保留用于未来的实现。比特币核心忽略所有库存与这些未知类型之一。
 
-### Block 布洛克[](https://developer.bitcoin.org/reference/p2p_networking.html#block "Permalink to this headline")
+### Block
 
 The [“block” message](https://developer.bitcoin.org/reference/p2p_networking.html#block) transmits a single serialized block in the format described in the [serialized blocks section](https://developer.bitcoin.org/reference/block_chain.html#serialized-blocks). See that section for an example hexdump. It can be sent for two different reasons:
 
@@ -150,7 +160,7 @@ The [“block” message](https://developer.bitcoin.org/reference/p2p_networkin
    
    主动提供的: 一些矿工将主动向所有同行发送“封锁”信息，广播他们新开采的矿石。许多挖掘池做同样的事情，尽管有些可能配置错误，从多个节点发送块，可能多次将同一块发送给一些对等点。
 
-### GetBlocks[](https://developer.bitcoin.org/reference/p2p_networking.html#getblocks "Permalink to this headline")
+### GetBlocks
 
 The [“getblocks” message](https://developer.bitcoin.org/reference/p2p_networking.html#getblocks) requests an [“inv” message](https://developer.bitcoin.org/reference/p2p_networking.html#inv) that provides block header hashes starting from a particular point in the block chain. It allows a peer which has been disconnected or started for the first time to get the data it needs to request the blocks it hasn’t seen.
 
@@ -188,7 +198,7 @@ d39f608a7775b537729884d4e6633bb2
 00000000000000000000000000000000
 00000000000000000000000000000000 ... Stop hash
 
-### GetData[](https://developer.bitcoin.org/reference/p2p_networking.html#getdata "Permalink to this headline")
+### GetData
 
 The [“getdata” message](https://developer.bitcoin.org/reference/p2p_networking.html#getdata) requests one or more data objects from another node. The objects are requested by an inventory, which the requesting node typically received previously by way of an [“inv” message](https://developer.bitcoin.org/reference/p2p_networking.html#inv).
 
@@ -206,7 +216,7 @@ The format and maximum size limitations of the [“getdata” message](https://
 
 “ getdata”消息的格式和最大大小限制与“ inv”消息相同; 只是消息头不同。
 
-### GetHeaders 开拓者[](https://developer.bitcoin.org/reference/p2p_networking.html#getheaders "Permalink to this headline")
+### GetHeaders
 
 *Added in*[protocol version 31800](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*.*
 
@@ -220,7 +230,7 @@ The [“getheaders” message](https://developer.bitcoin.org/reference/p2p_netw
 
 “ getheaders”消息与“ getblocks”消息几乎完全相同，只有一个小小的区别: 对“ getblocks”消息的 inv 回复将不超过500个块头散列; 对“ getheaders”消息的标题回复将包括多达2000个块头。
 
-### Headers 头文件[](https://developer.bitcoin.org/reference/p2p_networking.html#headers "Permalink to this headline")
+### Headers
 
 *Added in*[protocol version 31800](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*.*
 
@@ -250,7 +260,7 @@ b6ff0b1b1680a2862a30ca44d346d9e8
 fe9f0864 ........................... Nonce
 00 ................................. Transaction count (0x00)
 
-### Inv[](https://developer.bitcoin.org/reference/p2p_networking.html#inv "Permalink to this headline")
+### Inv
 
 The [“inv” message](https://developer.bitcoin.org/reference/p2p_networking.html#inv) (inventory message) transmits one or more inventories of objects known to the transmitting peer. It can be sent unsolicited to announce new transactions or blocks, or it can be sent in reply to a [“getblocks” message](https://developer.bitcoin.org/reference/p2p_networking.html#getblocks) or [“mempool” message](https://developer.bitcoin.org/reference/p2p_networking.html#mempool).
 
@@ -277,7 +287,7 @@ de55ffd709ac1f5dc509a0925d0b1fc4
 91d36d997037e08018262978766f24b8
 a055aaf1d872e94ae85e9817b2c68dc7 ... Hash (TXID)
 
-### MemPool[](https://developer.bitcoin.org/reference/p2p_networking.html#mempool "Permalink to this headline")
+### MemPool
 
 *Added in*[protocol version 60002](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*.*
 
@@ -307,7 +317,7 @@ There is no payload in a [“mempool” message](https://developer.bitcoin.org/
 
 在“ mempool”消息中没有有效负载。有关无负载消息的示例，请参见消息头部分。
 
-### MerkleBlock[](https://developer.bitcoin.org/reference/p2p_networking.html#merkleblock "Permalink to this headline")
+### MerkleBlock
 
 *Added in*[protocol version 70001](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*as described by*[BIP37](https://github.com/bitcoin/bips/blob/master/bip-0037.mediawiki)*.*
 
@@ -359,7 +369,7 @@ Note: when fully decoded, the above [“merkleblock” message](https://develop
 
 注意: 完全解码后，上面的“ merkleblock”消息为匹配过滤器的单个事务提供了 TXID。在网络通信转储中，这个输出是从“ tx”消息中获取的，属于这个 TXID 的完整事务是在“ merkleblock”消息之后立即发送的。
 
-#### Parsing A MerkleBlock Message 解析 MerkleBlock 消息[](https://developer.bitcoin.org/reference/p2p_networking.html#parsing-a-merkleblock-message "Permalink to this headline")
+#### Parsing A MerkleBlock Message
 
 As seen in the annotated hexdump above, the [“merkleblock” message](https://developer.bitcoin.org/reference/p2p_networking.html#merkleblock) provides three special data types: a transaction count, a list of hashes, and a list of one-bit flags.
 
@@ -428,7 +438,7 @@ For a detailed example of parsing a [“merkleblock” message](https://develop
 
 有关解析“ merkleblock”消息的详细示例，请参阅相应的 merkle block examples 部分。
 
-#### Creating A MerkleBlock Message 创建 MerkleBlock 消息[](https://developer.bitcoin.org/reference/p2p_networking.html#creating-a-merkleblock-message "Permalink to this headline")
+#### Creating A MerkleBlock Message
 
 It’s easier to understand how to create a [“merkleblock” message](https://developer.bitcoin.org/reference/p2p_networking.html#merkleblock) after you understand how to parse an already-created message, so we recommend you read the parsing section above first.
 
@@ -469,7 +479,7 @@ After you fully process the merkle root node according to the instructions in th
 
 根据上面表中的指令完全处理 merkle 根节点后，处理就完成了。将标志列表填充到字节边界，并使用本小节开头附近的模板构造“ merkleblock”消息。
 
-### CmpctBlock[](https://developer.bitcoin.org/reference/p2p_networking.html#cmpctblock "Permalink to this headline")
+### CmpctBlock
 
 *Added in*[protocol version 70014](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*as described by*[BIP152](https://github.com/bitcoin/bips/blob/master/bip-0152.mediawiki)*.*
 
@@ -573,7 +583,7 @@ Short transaction IDs are used to represent a transaction without sending a full
   
   附加两个空字节，以便可以读取为一个8字节的整数。
 
-### SendCmpct[](https://developer.bitcoin.org/reference/p2p_networking.html#sendcmpct "Permalink to this headline")
+### SendCmpct
 
 *Added in*[protocol version 70014](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*as described by*[BIP152](https://github.com/bitcoin/bips/blob/master/bip-0152.mediawiki)*.*
 
@@ -608,7 +618,7 @@ The structure of a [“sendcmpct” message](https://developer.bitcoin.org/refe
 | 1       | announce宣布 | bool布尔        | An integer representing a boolean value, must be 0x01 (true) or 0x00 (false).表示布尔值的整数必须是0x01(true)或0x00(false)。                                            |
 | 8图8     | version版本  | uint64_t64t   | A little-endian representation of a version number. **Version 2 compact blocks should be specified by setting version to 2**版本号的小尾数表示。版本2紧凑块应该通过将版本设置为2来指定 |
 
-### GetBlockTxn[](https://developer.bitcoin.org/reference/p2p_networking.html#getblocktxn "Permalink to this headline")
+### GetBlockTxn
 
 *Added in*[protocol version 70014](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*as described by*[BIP152](https://github.com/bitcoin/bips/blob/master/bip-0152.mediawiki)*.*
 
@@ -632,7 +642,7 @@ The structure of [“BlockTransactionsRequest”](https://developer.bitcoin.org
 | *Varies*不同 | indexes length索引长度 | compactSize uint紧凑型尺寸 | The number of transactions being requested.被请求的事务数。                                                                                                                                                                                                                                                                                       |
 | *Varies*不同 | indexes索引          | compactSize uint[][]  | Vector of compactSize containing the indexes of the transactions being requested in the block. **In version 2 of compact blocks, the wtxid should be used instead of the txid as defined by**[BIP141](https://github.com/bitcoin/bips/blob/master/bip-0141.mediawiki)compactSize 的向量，包含块中请求的事务的索引。在紧凑块的版本2中，应该使用 wtxid 而不是 bip141定义的 txid |
 
-### BlockTxn[](https://developer.bitcoin.org/reference/p2p_networking.html#blocktxn "Permalink to this headline")
+### BlockTxn
 
 *Added in*[protocol version 70014](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*as described by*[BIP152](https://github.com/bitcoin/bips/blob/master/bip-0152.mediawiki)*.*
 
@@ -652,7 +662,7 @@ The structure of [“BlockTransactions”](https://developer.bitcoin.org/refere
 | *Varies*不同 | transactions length事务长度 | compactSize uint紧凑型尺寸 | The number of transactions being provided.所提供的事务数。                                                                                                                                                                                      |
 | *Varies*不同 | transactions交易          | Transactions[]交易[]    | Vector of transactions, for an example hexdump of the raw transaction format, see the [raw transaction section](https://developer.bitcoin.org/reference/transactions.html#raw-transaction-format).事务的向量，有关原始事务格式的 hexdump 示例，请参见原始事务部分。 |
 
-### NotFound 没找到[](https://developer.bitcoin.org/reference/p2p_networking.html#notfound "Permalink to this headline")
+### NotFound
 
 *Added in*[protocol version 70001](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*.*
 
@@ -666,7 +676,7 @@ The format and maximum size limitations of the [“notfound” message](https:/
 
 “ notfound”消息的格式和最大大小限制与“ inv”消息相同; 只是消息头不同。
 
-### Tx[](https://developer.bitcoin.org/reference/p2p_networking.html#tx "Permalink to this headline")
+### Tx
 
 The [“tx” message](https://developer.bitcoin.org/reference/p2p_networking.html#tx) transmits a single transaction in the raw transaction format. It can be sent in a variety of situations;
 
@@ -688,7 +698,7 @@ For an example hexdump of the raw transaction format, see the [raw transaction 
 
 有关原始事务格式的 hexdump 示例，请参见原始事务部分。
 
-## Control Messages 控制信息[](https://developer.bitcoin.org/reference/p2p_networking.html#control-messages "Permalink to this headline")
+## Control Messages
 
 The following [network](https://developer.bitcoin.org/devguide/p2p_network.html) messages all help control the connection between two peers or allow them to advise each other about the rest of the [network](https://developer.bitcoin.org/devguide/p2p_network.html).
 
@@ -704,7 +714,7 @@ Note that almost none of the control messages are authenticated in any way, mean
 
 请注意，几乎没有任何控制消息以任何方式进行身份验证，这意味着它们可能包含不正确或有意的有害信息。此外，本节还不包括 Tor 网络上的 P2P 协议操作; 如果您想提供有关 Tor 的信息，请打开一个问题。
 
-### Addr[](https://developer.bitcoin.org/reference/p2p_networking.html#addr "Permalink to this headline")
+### Addr
 
 The `addr` (IP address) message relays connection information for peers on the [network](https://developer.bitcoin.org/devguide/p2p_network.html). Each peer which wants to accept incoming connections creates an [“addr” message](https://developer.bitcoin.org/reference/p2p_networking.html#addr) providing its connection information and then sends that message to its peers unsolicited. Some of its peers send that information to their peers (also unsolicited), some of which further distribute it, allowing decentralized peer discovery for any program already on the [network](https://developer.bitcoin.org/devguide/p2p_network.html).
 
@@ -741,7 +751,7 @@ d91f4854 ........................... [Epoch time][unix epoch time]: 1414012889
 208d ............................... Port: 8333
 [...] .............................. (999 more addresses omitted)
 
-### Alert 警报[](https://developer.bitcoin.org/reference/p2p_networking.html#alert "Permalink to this headline")
+### Alert
 
 *Added in*[protocol version 311](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*.* *Removed in*[protocol version 70013](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*and released in*[Bitcoin Core 0.13.0](https://bitcoin.org/en/release/v0.13.0)
 
@@ -751,7 +761,7 @@ The legacy p2p [network](https://developer.bitcoin.org/devguide/p2p_network.htm
 
 遗留的 p2p 网络警报消息传递系统已经退役; 但是，内部警报、分区检测警告和-alertnotify 选项特性仍然保留。详情请参阅警报系统退休。
 
-### FeeFilter[](https://developer.bitcoin.org/reference/p2p_networking.html#feefilter "Permalink to this headline")
+### FeeFilter
 
 *Added in*[protocol version 70013](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*as described by*[BIP133](https://github.com/bitcoin/bips/blob/master/bip-0133.mediawiki)*.*
 
@@ -791,7 +801,7 @@ The annotated hexdump below shows a [“feefilter” message](https://developer
 
 7cbd000000000000 ... satoshis per kilobyte: 48,508
 
-### FilterAdd[](https://developer.bitcoin.org/reference/p2p_networking.html#filteradd "Permalink to this headline")
+### FilterAdd
 
 *Added in*[protocol version 70001](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*as described by*[BIP37](https://github.com/bitcoin/bips/blob/master/bip-0037.mediawiki)*.*
 
@@ -822,7 +832,7 @@ The annotated hexdump below shows a [“filteradd” message](https://developer
 fdacf9b3eb077412e7a968d2e4f11b9a
 9dee312d666187ed77ee7d26af16cb0b ... Element (A TXID)
 
-### FilterClear[](https://developer.bitcoin.org/reference/p2p_networking.html#filterclear "Permalink to this headline")
+### FilterClear
 
 *Added in*[protocol version 70001](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*as described by*[BIP37](https://github.com/bitcoin/bips/blob/master/bip-0037.mediawiki)*.*
 
@@ -840,7 +850,7 @@ There is no payload in a [“filterclear” message](https://developer.bitcoin.
 
 在“ filterclear”消息中没有有效负载。有关无负载消息的示例，请参见消息头部分。
 
-### FilterLoad[](https://developer.bitcoin.org/reference/p2p_networking.html#filterload "Permalink to this headline")
+### FilterLoad
 
 *Added in*[protocol version 70001](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*as described by*[BIP37](https://github.com/bitcoin/bips/blob/master/bip-0037.mediawiki)*.*
 
@@ -1056,7 +1066,7 @@ In addition, because the filter size stays the same even though additional eleme
 
 此外，由于过滤器大小保持不变，即使添加了其他元素，误报率也会增加。每一个假阳性都会导致另一个元素被加入到过滤器中，从而产生一个反馈循环，使得过滤器(在某一点之后)失效。因此，使用自动过滤器更新的客户端需要监视实际的误报率，并在误报率过高时发送一个新的过滤器。
 
-### GetAddr[](https://developer.bitcoin.org/reference/p2p_networking.html#getaddr "Permalink to this headline")
+### GetAddr
 
 The [“getaddr” message](https://developer.bitcoin.org/reference/p2p_networking.html#getaddr) requests an [“addr” message](https://developer.bitcoin.org/reference/p2p_networking.html#addr) from the receiving node, preferably one with lots of IP addresses of other receiving nodes. The transmitting node can use those IP addresses to quickly update its database of available nodes rather than waiting for unsolicited [“addr” messages](https://developer.bitcoin.org/reference/p2p_networking.html#addr) to arrive over time.
 
@@ -1066,7 +1076,7 @@ There is no payload in a [“getaddr” message](https://developer.bitcoin.org/
 
 “ getaddr”消息中没有有效负载。有关无负载消息的示例，请参见消息头部分。
 
-### Ping 平[](https://developer.bitcoin.org/reference/p2p_networking.html#ping "Permalink to this headline")
+### Ping
 
 The [“ping” message](https://developer.bitcoin.org/reference/p2p_networking.html#ping) helps confirm that the receiving peer is still connected. If a TCP/IP error is encountered when sending the [“ping” message](https://developer.bitcoin.org/reference/p2p_networking.html#ping) (such as a connection timeout), the transmitting node can assume that the receiving node is disconnected. The response to a [“ping” message](https://developer.bitcoin.org/reference/p2p_networking.html#ping) is the [“pong” message](https://developer.bitcoin.org/reference/p2p_networking.html#pong).
 
@@ -1086,7 +1096,7 @@ The annotated hexdump below shows a [“ping” message](https://developer.bitc
 
 0094102111e2af4d ... Nonce
 
-### Pong 碰[](https://developer.bitcoin.org/reference/p2p_networking.html#pong "Permalink to this headline")
+### Pong
 
 *Added in*[protocol version 60001](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*as described by*[BIP31](https://github.com/bitcoin/bips/blob/master/bip-0031.mediawiki)*.*
 
@@ -1104,7 +1114,7 @@ The format of the [“pong” message](https://developer.bitcoin.org/reference/
 
 “ pong”消息的格式与“ ping”消息相同; 只是消息头不同。
 
-### Reject 拒绝[](https://developer.bitcoin.org/reference/p2p_networking.html#reject "Permalink to this headline")
+### Reject
 
 *Added in*[protocol version 70002](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*as described by*[BIP61](https://github.com/bitcoin/bips/blob/master/bip-0061.mediawiki)*.*
 
@@ -1158,7 +1168,7 @@ The annotated hexdump below shows a [“reject” message](https://developer.bi
 394715fcab51093be7bfca5a31005972
 947baf86a31017939575fb2354222821 ... TXID
 
-### SendHeaders 发送头文件[](https://developer.bitcoin.org/reference/p2p_networking.html#sendheaders "Permalink to this headline")
+### SendHeaders
 
 The [“sendheaders” message](https://developer.bitcoin.org/reference/p2p_networking.html#sendheaders) tells the receiving peer to send new block announcements using a [“headers” message](https://developer.bitcoin.org/reference/p2p_networking.html#headers) rather than an [“inv” message](https://developer.bitcoin.org/reference/p2p_networking.html#inv).
 
@@ -1168,7 +1178,7 @@ There is no payload in a [“sendheaders” message](https://developer.bitcoin.
 
 “ sendheaders”消息中没有有效负载。有关无负载消息的示例，请参见消息头部分。
 
-### VerAck 维拉克[](https://developer.bitcoin.org/reference/p2p_networking.html#verack "Permalink to this headline")
+### VerAck
 
 *Added in*[protocol version 209](https://developer.bitcoin.org/reference/p2p_networking.html#protocol-versions)*.*
 
@@ -1178,7 +1188,7 @@ The [“verack” message](https://developer.bitcoin.org/reference/p2p_networki
 
 “ verack”消息确认以前收到的“ version”消息，通知连接节点它可以开始发送其他消息。“ verack”消息没有有效负载; 有关没有有效负载的消息的示例，请参阅消息头部分。
 
-### Version 版本[](https://developer.bitcoin.org/reference/p2p_networking.html#version "Permalink to this headline")
+### Version
 
 The [“version” message](https://developer.bitcoin.org/reference/p2p_networking.html#version) provides information about the transmitting node to the receiving node at the beginning of a connection. Until both peers have exchanged [“version” messages](https://developer.bitcoin.org/reference/p2p_networking.html#version), no other messages will be accepted.
 
