--- a/blog/_posts/2020-11-02-p2pnetwork3.md
+++ b/blog/_posts/2020-11-02-p2pnetwork3.md
@@ -1,16 +1,23 @@
 ---
-title: P2P 网络（3）
+
+title: P2P 网络（3）例子
 summary: 比特币网络协议允许全节点协作地维护一个P2P（peer-to-peer）对等网络，用于块和交易交换
 date: 2020-11-02 12:00
 tags:
-
 - 比特币
+- 翻译
 
 ---
 
-# P2P Network P2P 网络[](https://developer.bitcoin.org/examples/p2p_networking.html#p2p-network "Permalink to this headline")
+# P2P 网络例子
 
-## Creating A Bloom Filter 创建一个 Bloom Filter[](https://developer.bitcoin.org/examples/p2p_networking.html#creating-a-bloom-filter "Permalink to this headline")
+::: info
+
+翻译自[P2P Network](https://developer.bitcoin.org/examples/p2p_networking.html)
+
+:::
+
+## 创建一个布隆过滤器 Bloom Filter
 
 In this section, we’ll use variable names that correspond to the field names in the [“filterload” message documentation](https://developer.bitcoin.org/reference/p2p_networking.html#filterload). Each code block precedes the paragraph describing it.
 
@@ -134,7 +141,7 @@ b50f ....... Filter: 1010 1101 1111 0000
 00000000 ... nTweak: 0/none
 00 ......... nFlags: BLOOM_UPDATE_NONE
 
-## Evaluating A Bloom Filter 评估 Bloom Filter[](https://developer.bitcoin.org/examples/p2p_networking.html#evaluating-a-bloom-filter "Permalink to this headline")
+## 评估布隆过滤器
 
 Using a bloom filter to find matching data is nearly identical to constructing a bloom filter—except that at each step we check to see if the calculated index bit is set in the existing filter.
 
@@ -188,7 +195,7 @@ Testing the filter against an arbitrary element, we get the failure output below
 
 MATCH FAILURE: Index 0x6 not set in 1010110111110000
 
-## Retrieving A MerkleBlock 检索 MerkleBlock[](https://developer.bitcoin.org/examples/p2p_networking.html#retrieving-a-merkleblock "Permalink to this headline")
+## Retrieving A MerkleBlock 检索 MerkleBlock
 
 For the [“merkleblock” message](https://developer.bitcoin.org/reference/p2p_networking.html#merkleblock) documentation on the reference page, an actual merkle block was retrieved from the [network](https://developer.bitcoin.org/devguide/p2p_network.html) and manually processed. This section walks through each step of the process, demonstrating basic [network](https://developer.bitcoin.org/devguide/p2p_network.html) communication and merkle block processing.
 
@@ -291,7 +298,7 @@ Part of the response is shown in the section below.
 
 响应的一部分显示在下面一节中。
 
-## Parsing A MerkleBlock 解析 MerkleBlock[](https://developer.bitcoin.org/examples/p2p_networking.html#parsing-a-merkleblock "Permalink to this headline")
+## Parsing A MerkleBlock 解析 MerkleBlock
 
 In the section above, we retrieved a merkle block from the [network](https://developer.bitcoin.org/devguide/p2p_network.html); now we will parse it. Most of the block header has been omitted. For a more complete hexdump, see the example in the `` `merkleblock`` message section <../reference/p2p_networking.html#merkleblock>`__.
 
